--- a/resume.html
+++ b/resume.html
@@ -4,7 +4,7 @@ head
     meta charset=UTF-8
     meta name=viewport content=width=device-width, initial-scale=1.0
     meta http-equiv=X-UA-Compatible content=ie=edge
-    titleSatyaprakash Singh  Machine Learning Portfoliotitle
+    title Vivek Gupta  Machine Learning Portfoliotitle
     link rel=stylesheet href=style.css
     link href=httpscdn.jsdelivr.netnpmbootstrap@5.3.0-alpha1distcssbootstrap.min.css rel=stylesheet
     style
@@ -69,7 +69,7 @@ body
     !-- Navigation --
     nav class=navbar navbar-expand-lg navbar-light bg-light
         div class=container-fluid
-            a class=navbar-brand href=#Satyaprakash Singha
+            a class=navbar-brand href=#Vivek Guptaa
             button class=navbar-toggler type=button data-bs-toggle=collapse data-bs-target=#navbarNav aria-controls=navbarNav aria-expanded=false aria-label=Toggle navigation
                 span class=navbar-toggler-iconspan
             button
