--- a/index.html
+++ b/index.html
@@ -183,6 +183,9 @@
         </div>
     </section>
 
+    <link rel="stylesheet" href="style.css">
+
+
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
