--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     <section id="about" class="about-section">
         <div class="container">
             <h2>About Me</h2>
-            <p>Hi! I'm Vivek Gupta, a second-year student pursuing a Bachelor's degree in Computer Science (Specialization in Artificial Intelligence and Machine Learning) from Mumbai University. With a GPA of 8.09, I’m passionate about applying machine learning techniques to solve real-world problems. I have experience in data analysis, model development, and AI technologies.</p>
+            <p>Hi! I'm Vivek Gupta, a third-year student pursuing a Bachelor's degree in Computer Science (Specialization in Artificial Intelligence and Machine Learning) from Mumbai University. With a GPA of 8.09, I’m passionate about applying machine learning techniques to solve real-world problems. I have experience in data analysis, model development, and AI technologies.</p>
         </div>
     </section>
 
