--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     <!-- Hero Section -->
     <header class="hero-section text-center">
         <div class="container">
-            <img src="C:\Users\jay\Desktop\ss.jpg" alt="Vivek Gupta" class="profile-img">
+            <img src="your-profile-image-url.jpg" alt="Vivek Gupta" class="profile-img">
             <h1 class="hero-title">Vivek Gupta</h1>
             <p class="hero-subtitle">Aspiring Machine Learning Engineer | Data Enthusiast</p>
         </div>
@@ -98,7 +98,7 @@
     <section id="about" class="about-section">
         <div class="container">
             <h2>About Me</h2>
-            <p>Hi! I'm Vivek Gupta, a third-year student pursuing a Bachelor's degree in Computer Science (Specialization in Artificial Intelligence and Machine Learning) from Mumbai University. With a GPA of 8.09, I’m passionate about applying machine learning techniques to solve real-world problems. I have experience in data analysis, model development, and AI technologies.</p>
+            <p>Hi! I'm Vivek Gupta, a second-year student pursuing a Bachelor's degree in Computer Science with a specialization in Artificial Intelligence and Machine Learning at Mumbai University. With a GPA of 8.09, I am passionate about machine learning, data analytics, and solving real-world problems through technology.</p>
         </div>
     </section>
 
@@ -108,16 +108,16 @@
             <h2>Skills</h2>
             <div class="row">
                 <div class="col-md-4">
-                    <h4>Programming</h4>
-                    <p>Python, C, Java, Prolog</p>
+                    <h4>Programming Languages</h4>
+                    <p>Python, C, Prolog, SQL, Java</p>
+                </div>
+                <div class="col-md-4">
+                    <h4>Machine Learning Tools</h4>
+                    <p>Pandas, NumPy, TensorFlow, Scikit-learn</p>
                 </div>
                 <div class="col-md-4">
                     <h4>Data Platforms</h4>
-                    <p>SQL, Pandas, NumPy</p>
-                </div>
-                <div class="col-md-4">
-                    <h4>Machine Learning</h4>
-                    <p>TensorFlow, Scikit-Learn, Keras</p>
+                    <p>Jupyter, Oracle Cloud Infrastructure</p>
                 </div>
             </div>
         </div>
@@ -129,15 +129,15 @@
             <h2>Projects</h2>
             <div class="project-item">
                 <h4>Iris Flower Classification</h4>
-                <p>Developed a classification model to predict the species of iris flowers using machine learning techniques. <a href="">View on GitHub</a></p>
+                <p>Built a machine learning model to classify iris flower species using Python and Scikit-learn.</p>
             </div>
             <div class="project-item">
-                <h4>Wine Quality Predictions</h4>
-                <p>Built a model to predict wine quality based on chemical properties. <a href="">View on GitHub</a></p>
+                <h4>Wine Quality Prediction</h4>
+                <p>Developed a model to predict wine quality based on various chemical properties.</p>
             </div>
             <div class="project-item">
                 <h4>House Price Prediction</h4>
-                <p>Created a machine learning model to predict house prices. <a href="" target="_blank">View on GitHub</a></p>
+                <p>Created a regression model to predict house prices based on location and features.</p>
             </div>
         </div>
     </section>
@@ -147,12 +147,11 @@
         <div class="container">
             <h2>Certifications</h2>
             <ul>
-                <li>Machine Learning with Python - IBM</li>
-                <li>Learning Python - Infosys</li>
-                <li>Oracle Cloud Data Management Certified Associate</li>
-                <li>Problem Solving (Basic) - HackerRank</li>
+                <li>Oracle Cloud Infrastructure Classic 2018 Certified Associate Architect</li>
+                <li>Machine Learning with Python (IBM)</li>
+                <li>Problem Solving (HackerRank)</li>
+                <li>Machine Learning & Data Analytics (Skillsoft)</li>
             </ul>
-            <a href="C:\Users\jay\Desktop\Resume_vivek_gupta.pdf" class="btn btn-primary">Download Resume</a>
         </div>
     </section>
 
@@ -160,31 +159,10 @@
     <section id="contact" class="contact-section">
         <div class="container">
             <h2>Contact Me</h2>
-            <form action="mailto:vivekg1525@gmail.com" method="post" enctype="text/plain">
-                <div class="mb-3">
-                    <label for="name" class="form-label">Name</label>
-                    <input type="text" class="form-control" id="name" required>
-                </div>
-                <div class="mb-3">
-                    <label for="email" class="form-label">Email</label>
-                    <input type="email" class="form-control" id="email" required>
-                </div>
-                <div class="mb-3">
-                    <label for="message" class="form-label">Message</label>
-                    <textarea class="form-control" id="message" rows="3" required></textarea>
-                </div>
-                <button type="submit" class="btn btn-primary">Send Message</button>
-            </form>
-            <div class="contact-info">
-                <p>Email: <a href="mailto:vivekg1525@gmail.com">vivekg1525@gmail.com</a></p>
-                <p>Phone: +91 9119824346</p>
-                <p>LinkedIn: <a href="https://www.linkedin.com/in/vivek-gupta-a06383250/">linkedin.com/in/vivek-gupta</a></p>
-            </div>
+            <p>Email: <a href="mailto:vivekg1525@gmail.com">vivekg1525@gmail.com</a></p>
+            <p>LinkedIn: <a href="https://www.linkedin.com/in/vivek-gupta-a06383250">linkedin.com/in/vivek-gupta</a></p>
         </div>
     </section>
-
-    <link rel="stylesheet" href="style.css">
-
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
